# kube-lease-manager

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  cliff.toml  deny.toml
.cargo/: config.toml
.github/workflows/: audit.yaml  auto-close-stale-issues.yaml  ci.yaml  coverage.yaml  publish.yaml
examples/: jobs_logger.rs
src/: backoff.rs  error.rs  lib.rs  manager.rs  state.rs
src/tests/: mod.rs
tests/: auto.rs  manual.rs  watch_many_threads.rs
tests/common/: k3s.rs  mod.rs
